--- a/Eirvidprototype/nbproject/project.properties
+++ b/Eirvidprototype/nbproject/project.properties
@@ -35,13 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Eirvidprototype
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\CexUser\\Documents\\mysql-connector-j-8.0.31.jar
-file.reference.mysql-connector-java-8.0.27.jar=..\\..\\..\\..\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-j-8.0.31.jar=..\\..\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
