--- a/Eirvidprototype/nbproject/project.properties
+++ b/Eirvidprototype/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/Eirvidprototype
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=..\\..\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=C:\\Users\\CexUser\\Documents\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
