--- a/Eirvidprototype/nbproject/private/private.properties
+++ b/Eirvidprototype/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ca_ro\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\Amanda Lima\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
