--- a/Eirvidprototype/nbproject/private/private.properties
+++ b/Eirvidprototype/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\CexUser\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\tchat\\AppData\\Roaming\\NetBeans\\15\\build.properties
